CSS/main.css
.wrapper {
  position: absolute;
  width: auto;
  height: 100%;
  background-color: black;
}

img.cliente {
  /* background-color: pink; */
  width: 20%;
}

.global_map {
  position: absolute;
  top: 10%;
  left: 10%;
  right: 10%;
  bottom: 10%;
  z-index: 1;
  /* background-color: red; */
}

.datamap {
  all: unset;
}

.name {
  color: white;
}

.header {
  position: absolute;
  top: 2px;
  right: 5px;
  padding-top: 0;
  /* background-color: orange; */
}

.subheader {
  position: absolute;
  top: 0;
  left: 30%;
  right: 30%;
  z-index: 2;
  width: auto;
  text-align: center;
  font-size: 2em;
  /* background-color: blue; */
}

.timer {
  color: white;
  position: absolute;
  bottom: 0;
  right: 0;
  width: auto;
  /* background-color: green; */
  font-size: 2em;
  z-index: 3;
}

.attack_console {
  position: absolute;
  background-color: black;
  height: 35%;
  width: 30%;
  bottom: 0;
  left: 3px;
  z-index: 3;
  font-size: 1.5em;
  color: white;
  overflow-y: auto;
}
::-webkit-scrollbar {
    width: 0px;
    background: transparent; /* make scrollbar transparent */
}

